[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clickup-async"
version = "0.1.0"
description = "Modern async Python client for ClickUp API with type hints, rate limiting and fluent interface"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "catorch", email = "catorch@example.com"}
]
keywords = [
    "clickup", 
    "async", 
    "api-client", 
    "httpx", 
    "asyncio", 
    "task-management", 
    "productivity", 
    "project-management",
    "pydantic"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
dev = [
    "black",
    "isort",
    "mypy",
    "pre-commit",
]

[project.urls]
"Homepage" = "https://github.com/catorch/clickup-async"
"Documentation" = "https://github.com/catorch/clickup-async#readme"
"Bug Tracker" = "https://github.com/catorch/clickup-async/issues"
"Changelog" = "https://github.com/catorch/clickup-async/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true